Sample-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api
  namespace: default
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - image: image:v3
          name: nginx-app
          livenessProbe:
           httpGet:
             path: /
             port: 80
             scheme: HTTP
           initialDelaySeconds: 10
           timeoutSeconds: 10
          ports:
            - protocol: TCP
              containerPort: 80
