Sample-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace : default
  labels:
    app: harshal-app
spec:
  type: NodePort
  ports:
  - protocol: TCP
    name: "port"
    port: 80
    targetPort: 80
  selector:
    run: harshal-app
